# tap-googleads

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
tap_googleads/: client.py  custom_query_stream.py  dynamic_query_stream.py  streams.py  tap.py
tap_googleads/dynamic_streams/: __init__.py  ad_group_ad.py  ad_group_ad_label.py  ad_group_criterion.py  ad_group_label.py  ad_groups.py  ad_groups_performance.py  ad_listing_group_criterion.py  audience.py  campaign_budget.py  campaign_criterion.py  campaign_history.py  campaign_label.py  campaign_performance.py  campaign_performance_by_age_range_and_device.py  campaign_performance_by_gender_and_device.py  campaign_performance_by_location.py  campaigns.py  click_view_report.py  customer.py  customer_label.py  gender_view.py  geo_performance.py  geotargets.py  keyword_view.py  label.py  managed_placement_view.py  search_term_view.py  user_interest.py  video.py
tap_googleads/schemas/: adgropus_historical_performance.json  campaign_conversion.json  campaign_performance.json  campaign_performance_by_age_range_and_device.json  campaign_performance_by_gender_and_device.json  campaign_performance_by_location.json  conversion.json  conversion_goals.json  keyword_performance.json  performance_max_asset_group_historical_performance.json  performance_max_asset_groups.json  search_query_performance.json
tap_googleads/tests/: test_base_credentials.py  test_dynamic_query_stream.py  test_proxy_oauth.py  test_start_date.py
